corrected static folder and added bootstrap

--- a/website/templates/hangman.html
+++ b/website/templates/hangman.html
@@ -5,7 +5,7 @@
     <h1> Welcome to Hangman </h1>
 </div>
 
-<div class="hangman-description">
+<div class="hangman-description text-center">
     <p>THIS IS TEMPTEXT HOLDER. DESCRIPTION OF HANGMAN WILL BE HERE. THIS IS TEMPTEXT HOLDER. DESCRIPTION OF HANGMAN WILL BE HERE. THIS IS TEMPTEXT HOLDER. DESCRIPTION OF HANGMAN WILL BE HERE.</p>
 </div>
 
