--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -13,7 +13,7 @@
     </body>
     <head>
         <nav>
-            <ul>
+            <ul class="text-center">
                 <li>Andrew Nguyen</li>
                 <li>Home</li>
                 <li>Hangman</li>
@@ -25,6 +25,9 @@
         </div>
         
 
+        <footer>
+
+        </footer>
 
     </head>
 </html>
