completed hangman template

--- a/website/templates/hangman.html
+++ b/website/templates/hangman.html
@@ -10,11 +10,60 @@
 </div>
 
 <div class="hangman-game">
+    <svg width="250" height="230" id="drawing">
+        <!-- Structure -->
+        <!-- <line y1="220" y2="220" x1="10" x2="120" />
+        <line y1="10" y2="220" x1="65" x2="65" />
+        <line y1="10" y2="10" x1="65" x2="175" />
+        <line y1="10" y2="40" x1="175" x2="175" />
 
+        <line y1 -->
+    
+        <!-- Hangman -->
+        <!-- <g id="hangman-drawing">
+          <circle cx="175" cy="55" r="15" />
+          <ellipse cx="175" cy="115" rx="20" ry="45" />
+          <line y1="150" y2="190" x1="162" x2="140" />
+          <line y1="150" y2="190" x1="188" x2="210" />
+          <line y1="80" y2="40" x1="162" x2="140" />
+          <line y1="80" y2="40" x1="188" x2="210" />
+        </g> -->
+      </svg>
 </div>
 
 <div class="hangman-keyboard">
-    
+    <div class="row-one">
+        <button class="keyboard-button">q</button>
+        <button class="keyboard-button">w</button>
+        <button class="keyboard-button">e</button>
+        <button class="keyboard-button">r</button>
+        <button class="keyboard-button">t</button>
+        <button class="keyboard-button">y</button>
+        <button class="keyboard-button">u</button>
+        <button class="keyboard-button">i</button>
+        <button class="keyboard-button">o</button>
+        <button class="keyboard-button">p</button>
+    </div>
+    <div class="row-two">
+        <button class="keyboard-button">a</button>
+        <button class="keyboard-button">s</button>
+        <button class="keyboard-button">d</button>
+        <button class="keyboard-button">f</button>
+        <button class="keyboard-button">g</button>
+        <button class="keyboard-button">h</button>
+        <button class="keyboard-button">j</button>
+        <button class="keyboard-button">k</button>
+        <button class="keyboard-button">l</button>
+    </div>
+    <div class="row-three">
+        <button class="keyboard-button">z</button>
+        <button class="keyboard-button">x</button>
+        <button class="keyboard-button">c</button>
+        <button class="keyboard-button">v</button>
+        <button class="keyboard-button">b</button>
+        <button class="keyboard-button">n</button>
+        <button class="keyboard-button">m</button>
+    </div>
 </div>
 
 
