--- a/website/templates/hangman.html
+++ b/website/templates/hangman.html
@@ -5,64 +5,81 @@
     <h1> Welcome to Hangman </h1>
 </div>
 
-<div class="hangman-description text-center">
-    <p>THIS IS TEMPTEXT HOLDER. DESCRIPTION OF HANGMAN WILL BE HERE. THIS IS TEMPTEXT HOLDER. DESCRIPTION OF HANGMAN WILL BE HERE. THIS IS TEMPTEXT HOLDER. DESCRIPTION OF HANGMAN WILL BE HERE.</p>
+<div class="hangman-description">
+    <p>THIS IS TEMPTEXT HOLDER. DESCRIPTION OF HANGMAN WILL BE HERE. THIS IS TEMPTEXT HOLDER. DESCRIPTION OF HANGMAN
+        WILL BE HERE. THIS IS TEMPTEXT HOLDER. DESCRIPTION OF HANGMAN WILL BE HERE.</p>
 </div>
 
 <div class="hangman-game">
-    <svg width="250" height="230" id="drawing">
-        <!-- Structure -->
-        <!-- <line y1="220" y2="220" x1="10" x2="120" />
-        <line y1="10" y2="220" x1="65" x2="65" />
-        <line y1="10" y2="10" x1="65" x2="175" />
-        <line y1="10" y2="40" x1="175" x2="175" />
+    <svg id="hangman-drawing" class="text-center">
+        <g>
+            <g id="drawing-frame">
+                <rect x="0" y="0" width="100%" height="100%" stroke-width="3px"></rect>
+            </g>
+            <!-- Drawing of Platform -->
+            <g id="drawing-platform">
+                <line x1="0" y1="250" x2="390" y2="250"></line>
+                <line x1="100" y1="250" x2="100" y2="20"></line>
+                <line x1="100" y1="20" x2="200" y2=20></line>
+                <line x1="200" y1="20" x2="200" y2="60"></line>
+            </g>
 
-        <line y1 -->
+            <!-- Drawing of Body -->
+            <g id="drawing-body">
+                <circle id="head" cx="200" cy="80" r="20" fill="white"></circle>
+                <circle id="left-eye" cx="193" cy="80" r="4"></circle>
+                <circle id="right-eye" cx="207" cy="80" r="4"></circle>
+                <line id="torso" x1="200" y1="100" x2="200" y2="150" />
+                <line id="armL" x1="200" y1="120" x2="170" y2="140" />
+                <line id="armR" x1="200" y1="120" x2="230" y2="140" />
+                <line id="legL" x1="200" y1="150" x2="180" y2="190" />
+                <line id="legR" x1="200" y1="150" x2="220" y2="190" />
+            </g>
+        </g>
+    </svg>
+</div>
+
+<div class="hangman-secret-word">
+
+    {% for letter in word %} 
+        <span class="secret-letter" id={{"letter-" ~ loop.index}}>-</span>
+    {% endfor %}
+
     
-        <!-- Hangman -->
-        <!-- <g id="hangman-drawing">
-          <circle cx="175" cy="55" r="15" />
-          <ellipse cx="175" cy="115" rx="20" ry="45" />
-          <line y1="150" y2="190" x1="162" x2="140" />
-          <line y1="150" y2="190" x1="188" x2="210" />
-          <line y1="80" y2="40" x1="162" x2="140" />
-          <line y1="80" y2="40" x1="188" x2="210" />
-        </g> -->
-      </svg>
 </div>
 
 <div class="hangman-keyboard">
-    <div class="row-one">
-        <button class="keyboard-button">q</button>
-        <button class="keyboard-button">w</button>
-        <button class="keyboard-button">e</button>
-        <button class="keyboard-button">r</button>
-        <button class="keyboard-button">t</button>
-        <button class="keyboard-button">y</button>
-        <button class="keyboard-button">u</button>
-        <button class="keyboard-button">i</button>
-        <button class="keyboard-button">o</button>
-        <button class="keyboard-button">p</button>
+    <div class="keyboard-row row-one">
+        <button class="keyboard-button btn">q</button>
+        <button class="keyboard-button btn">w</button>
+        <button class="keyboard-button btn">e</button>
+        <button class="keyboard-button btn">r</button>
+        <button class="keyboard-button btn">t</button>
+        <button class="keyboard-button btn">y</button>
+        <button class="keyboard-button btn">u</button>
+        <button class="keyboard-button btn">i</button>
+        <button class="keyboard-button btn">o</button>
+        <button class="keyboard-button btn">p</button>
     </div>
-    <div class="row-two">
-        <button class="keyboard-button">a</button>
-        <button class="keyboard-button">s</button>
-        <button class="keyboard-button">d</button>
-        <button class="keyboard-button">f</button>
-        <button class="keyboard-button">g</button>
-        <button class="keyboard-button">h</button>
-        <button class="keyboard-button">j</button>
-        <button class="keyboard-button">k</button>
-        <button class="keyboard-button">l</button>
+    <div class="keyboard-row row-two">
+        <button class="keyboard-button btn">a</button>
+        <button class="keyboard-button btn">s</button>
+        <button class="keyboard-button btn">d</button>
+        <button class="keyboard-button btn">f</button>
+        <button class="keyboard-button btn">g</button>
+        <button class="keyboard-button btn">h</button>
+        <button class="keyboard-button btn">j</button>
+        <button class="keyboard-button btn">k</button>
+        <button class="keyboard-button btn">l</button>
     </div>
-    <div class="row-three">
-        <button class="keyboard-button">z</button>
-        <button class="keyboard-button">x</button>
-        <button class="keyboard-button">c</button>
-        <button class="keyboard-button">v</button>
-        <button class="keyboard-button">b</button>
-        <button class="keyboard-button">n</button>
-        <button class="keyboard-button">m</button>
+    <div class="keyboard-row row-three">
+        <button class="keyboard-button btn">z</button>
+        <button class="keyboard-button btn">x</button>
+        <button class="keyboard-button btn">c</button>
+        <button class="keyboard-button btn">v</button>
+        <button class="keyboard-button btn">b</button>
+        <button class="keyboard-button btn">n</button>
+        <button class="keyboard-button btn">m</button>
     </div>
 </div>
 
