--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <body>
+    <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="device-width", initial-scale="1.0">
-
         <title>Hangman</title>
 
-        <link rel="stylesheet" href="{{url_for('static', filename='game.css')}}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
+        
+        {% block styles %}{% endblock %}
 
+        
         <!-- Bootstrap -->
-        <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css')}}">
-    </body>
-    <head>
-        <nav>
-            <ul>
-                <li>Andrew Nguyen</li>
-                <li>Home</li>
-                <li>Hangman</li>
-                <li>Wordle</li> 
+        <!-- <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
+         -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-md navbar-dark bg-primary">   
+            <a class="navbar-brand" href="/">Home</a>
+
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="game">Hangman</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Wordle</a></li>                
             </ul>
         </nav>
-        <div class="content">
-            {% block content%}{% endblock %}
+
+        <div class="content text-center">
+            {% block content %}{% endblock %}
         </div>
-        
 
-        <footer>
+        <!-- <script src="{{ url_for('static', filename='jquery-3.6.0.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='game.js') }}"></script> -->
 
-        </footer>
+        <!-- JavaScript Bundle with Popper -->
+        <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
 
-    </head>
+    </body>
 </html>
