--- a/website/templates/hangman-game.html
+++ b/website/templates/hangman-game.html
@@ -79,3 +79,7 @@
     </div>
 </div>
 {% endblock %}
+
+{% block script %} 
+<script src={{ url_for('static', filename='game.js')}}></script>
+{% endblock %}
