--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -2,23 +2,23 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="device-width", initial-scale="1.0">
+        <meta name="viewport" content="width=device-width", initial-scale="1.0">
         <title>Hangman</title>
 
         <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
         
         {% block styles %}{% endblock %}
 
-        
         <!-- Bootstrap -->
-        <!-- <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
-         -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <link 
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" 
+            rel="stylesheet" 
+            integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" 
+            crossorigin="anonymous">
     </head>
     <body>
-        <nav class="navbar navbar-expand-md navbar-dark bg-primary">   
+        <nav class="navbar navbar-expand-sm navbar-dark bg-primary">   
             <a class="navbar-brand" href="/">Home</a>
-
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="game">Hangman</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Wordle</a></li>                
@@ -29,11 +29,18 @@
             {% block content %}{% endblock %}
         </div>
 
-        <!-- <script src="{{ url_for('static', filename='jquery-3.6.0.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='game.js') }}"></script> -->
-
         <!-- JavaScript Bundle with Popper -->
-        <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
+        <script 
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" 
+            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" 
+            crossorigin="anonymous"></script>
+        <!-- Jquery 3.6 -->
+        <script
+            src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+            crossorigin="anonymous"></script>
+
+        {% block script %} {% endblock %}
 
     </body>
 </html>
