--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -20,14 +20,16 @@
         <nav class="navbar navbar-expand-sm navbar-dark bg-primary">   
             <a class="navbar-brand" href="/">Home</a>
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="game">Hangman</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Wordle</a></li>                
+                <li class="nav-item"><a class="nav-link" href={{ url_for('hangman') }} >Hangman</a></li>
+                <li class="nav-item"><a class="nav-link" href="#" >Wordle</a></li>                
             </ul>
         </nav>
 
         <div class="content text-center">
             {% block content %}{% endblock %}
         </div>
+
+        
 
         <!-- JavaScript Bundle with Popper -->
         <script 
