ADDED WORKING DATABASE

--- a/website/templates/hangman-game.html
+++ b/website/templates/hangman-game.html
@@ -44,7 +44,7 @@
     
 </div>
 
-<div class="hangman-keyboard">
+<form class="hangman-keyboard" method="get">
     <div class="keyboard-row row-one">
         <button type="button" class="keyboard-button btn btn-lg">q</button>
         <button type="button" class="keyboard-button btn btn-lg">w</button>
@@ -77,7 +77,7 @@
         <button type="button" class="keyboard-button btn btn-lg">n</button>
         <button type="button" class="keyboard-button btn btn-lg" value="m">m</button>
     </div>
-</div>
+</form>
 {% endblock %}
 
 {% block script %} 
