--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -6,9 +6,6 @@
         <title>Hangman</title>
 
         <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
-        
-        {% block styles %}{% endblock %}
-
         <!-- Bootstrap -->
         <link 
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" 
@@ -41,8 +38,8 @@
             src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
             crossorigin="anonymous"></script>
-
-        {% block script %} {% endblock %}
+        
+        <script src="{{ url_for('static', filename='js/hangman.js') }}"></script>
 
     </body>
 </html>
