--- a/website/static/css/index.css
+++ b/website/static/css/index.css
@@ -20,8 +20,75 @@ ul {
     margin: 0 !important;
 }
 
+.topic-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-/* 
-.btn {
-    box-shadow: none !important;
-} */
+.topic-item {
+    width: 500px;
+    margin: 1rem 0;
+    padding: 0;
+    transition: transform .3s ease-in-out;
+}
+
+.topic-item:hover {
+    transform: scale(1.1);
+}
+
+.topic-item span, .topic-item p {
+    padding: 0 !important;
+    margin: 0;
+}
+
+.topic-item span {
+    font-size: larger;
+}
+
+/* Hangman SVG */
+line, circle {
+    stroke: black;
+    stroke-width: 4px;
+}
+
+rect {
+    fill: none;
+}
+
+.hangman-game {
+    height: 300px;
+    width: 100%;
+}
+
+#hangman-drawing {
+    display: block;
+    height: 100%;
+    width: fit-content;
+    padding: 10px;
+    margin: auto;
+    border: 1px solid black;
+}
+
+/* Hangman Secret Word */
+.hangman-secret-word {
+    margin: auto;
+}
+
+.secret-word {
+    font-size: 50px;
+    letter-spacing: 25px;
+}
+
+/* Hangman keyboard */
+
+.hangman-keyboard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.keyboard-row {
+    margin-top: 20px;
+}
