To do list tomorrow

--- a/website/templates/hangman-game.html
+++ b/website/templates/hangman-game.html
@@ -33,6 +33,16 @@
 </div>
 
 
+<!-- TODO
+    add color-coded letter presses. when letter is contained in word vs not contained
+    figure out how to keep in memory the key pressed no matter whether if the page is reloaded or not
+    the end game design. 
+    Sound and animation
+    The animation of hangman
+    
+
+-->
+
 <div class="hangman-keyboard">
     <div class="keyboard-row row-one">
         <button type="button" class="keyboard-button btn btn-lg">q</button>
