--- a/website/templates/hangman.html
+++ b/website/templates/hangman.html
@@ -14,10 +14,10 @@
     </p>
 </div>
 <div class="topic-form">
-    <div class="topic-item btn btn-md border-primary">
+    <button class="topic-item btn btn-md border-primary ">
         <span class="topic-title text-bg-light">Classic</span>
         <p class="topic-desc">Words from English Dictionary</p>
-    </div>
+    </button>
     <div class="topic-item btn btn-md border-primary">
         <span class="topic-title text-bg-light">LoL</span>
         <p class="topic-desc">A champion from League of Legend</p>
