--- a/website/static/css/index.css
+++ b/website/static/css/index.css
@@ -3,6 +3,7 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body, html {
@@ -20,6 +21,14 @@ ul {
     margin: 0 !important;
 }
 
+/* END GLOBAL */
+
+/* Navbar */
+.navbar-brand {
+    margin-left: 20px;
+}
+
+
 .topic-form {
     display: flex;
     flex-direction: column;
@@ -27,10 +36,9 @@ ul {
 }
 
 .topic-item {
-    width: 500px;
+    width: clamp(300px, 700px, 100%);
     margin: 1rem 0;
     padding: 0;
-    transition: transform .3s ease-in-out;
 }
 
 .topic-item:hover {
@@ -69,6 +77,23 @@ rect {
     margin: auto;
     border: 1px solid black;
 }
+
+.drawing-body > * {
+    display: none;
+}
+
+
+@keyframes fadein {
+    from {
+        opacity: 0%;
+    }
+
+    to {
+        opacity: 100%;
+    }
+}
+
+/* END OF DRAWING */
 
 /* Hangman Secret Word */
 .hangman-secret-word {
