--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -15,11 +15,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-sm navbar-dark bg-primary">   
-            <a class="navbar-brand" href="/">Home</a>
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href={{ url_for('hangman') }} >Hangman</a></li>
-                <li class="nav-item"><a class="nav-link" href="#" >Wordle</a></li>                
-            </ul>
+            <a class="navbar-brand" href={{ url_for('hangman') }}>Hangman</a>
         </nav>
 
         <div class="content text-center">
