--- a/website/templates/hangman.html
+++ b/website/templates/hangman.html
@@ -14,17 +14,13 @@
     </p>
 </div>
 <div class="topic-form">
-    <button class="topic-item btn btn-md border-primary ">
+    <div class="topic-item btn btn-md border-primary">
         <span class="topic-title text-bg-light">Classic</span>
         <p class="topic-desc">Words from English Dictionary</p>
-    </button>
+    </div>
     <div class="topic-item btn btn-md border-primary">
         <span class="topic-title text-bg-light">LoL</span>
         <p class="topic-desc">A champion from League of Legend</p>
-    </div>
-    <div class="topic-item btn btn-md border-primary" action="">
-        <span class="topic-title text-bg-light">Test</span>
-        <p class="topic-desc">A small dictionary</p>
     </div>
 </div>
 {% endblock %}
