--- a/website/templates/hangman.html
+++ b/website/templates/hangman.html
@@ -20,7 +20,11 @@
     </div>
     <div class="topic-item btn btn-md border-primary">
         <span class="topic-title text-bg-light">LoL</span>
-        <p class="topic-desc">A champion from League of Legend</p>
+        <p class="topic-desc">A Champion from League of Legend</p>
+    </div>
+    <div class="topic-item btn btn-md border-primary">
+        <span class="topic-title text-bg-light">Valorant</span>
+        <p class="topic-desc">An agent from Valorant</p>
     </div>
 </div>
 {% endblock %}
