--- a/website/templates/hangman.html
+++ b/website/templates/hangman.html
@@ -5,12 +5,11 @@
 </div>
 
 <div class="hangman-description">
-    <p>Welcome to Hangman! The computer will think of a word and you will try to guess what it is
-        one letter at a time. The number of dashes are the number of letters in the secret word.
-        Guessing a correct letter from below will replaces those dashes for every letter contained
-        in the secret word. If the letter guessed is incorrect, the computer will draw a segment
-        of the gallows and the man will be closer to execution. The number of incorrect guesses
-        before the game ends will be <span>10 guesses</span>. That's it, have fun!
+    <p>Welcome to Hangman! Choose a topic and the computer will think of a word based on the chosen topic. 
+        You'll try to guess what the word is one guess at a time. The secret word will initially be a number 
+        of dashes representing the length of the secret word. Guessing a correct letter using the on-screen keyboard
+        will replace one or more of the dashes with the guessed letter. However, guessing an incorrect letter will make you one body part
+        closer to losing the game and letting the man be executed. Good luck and HAVE FUN!
     </p>
 </div>
 <div class="topic-form">
